--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 idna==3.4
 oauthlib==3.2.2
+gunicorn==21.2.0
 Pillow==9.0.0
 pycparser==2.21
 PyJWT==2.8.0
