--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ Pillow==9.0.0
 platformdirs==3.10.0
 psycopg2==2.9.7
 pycparser==2.21
+djoser==2.2.0
 PyJWT==2.8.0
 python-dateutil==2.8.2
 python3-openid==3.2.0
