--- a/requirements.txt
+++ b/requirements.txt
@@ -45,6 +45,7 @@ six==1.16.0
 social-auth-app-django==5.3.0
 social-auth-core==4.4.2
 sqlparse==0.4.4
+django-threaded-email==0.0.1
 typing_extensions==4.7.1
 tzdata==2023.3
 uritemplate==4.1.1
